--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spring-boot-library
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/reactlibrarydatabase
 spring.datasource.username=postgres
 spring.datasource.password=18112004
 
